2000-11-28  Stanislav Brabec  <utx@penguin.cz>

        * esd.c, configure.in: Security improvements: All unsafe
	operations while creating ESD_UNIX_SOCKET_DIR was removed, new
	function safe_mksocketdir(), new variable esd_trustval and new
	argument -trust. Use +t on ESD_UNIX_SOCKET_DIR. There still
	remains trivial local DoS attack - I don't see better possible
	solution than suid helper.

	* configure.in: Added check for fchown and fchmod.

2000-11-28  Stanislav Brabec  <utx@penguin.cz>

	* esd.c: Use rmdir on directories instead of unlink,
	support for --help and help for -nobeeps.
	* esdlib.c: Typo fixes.
	* esdfile.c: Open files via "rb" on all systems. It is standard C,
	does no harm on systems where it isn't needed (Unix).

2000-10-30  Heikki Hannikainen <hessu@hes.iki.fi>

	* clients.c, esd-server.h, esd.c, players.c, proto.ci: Added
	support for multiple recording clients. Pretty straightforward
	cloning of player clients handling code.
	* 0.2.21

2000-09-13  Timur Bakeyev <mc@bat.ru>

	* esd.c: Reset to zero sockaddr_in structure. Without that BSDI doesn't
	let to bind to 127.0.0.1 address.. It's a good habbit anyhow to do so...
	
	* esdlib.c: If we are trying to connect to the localhost, it should be
	127.0.0.1, not 0.0.0.0, which is just INADDR_ANY... It happens to match
	localhost, but isn't necessary to... So, changed client to connect to the
	127.0.0.1 (which also should work with esd -tcp -public, but opposit does
	not work).
	
2000-07-21  Stanislav Brabec  <utx@penguin.cz>

	* acconfig.h, audio.c, audio_dart.c, configure.in, esdcat.c,
	esdfile.c, esdlib.c, os2medef.h, os2me.h, proto.c: Merged changes
	from cvs.enlightenment.org.

2000-07-18 Elliot Lee <sopwith@redhat.com>
	* Undo esd_send_file change on 03-03 - it makes lots of things break.
	* Fix fcntl that tried to remove non-blocking flag.
	* 0.2.19

2000-05-01  Drazen Kacar  <dave@srce.hr>

	* audio_solaris.c: Don't set the output device, volume and