@@ -1,3 +1,8 @@
+2000-11-29  Stanislav Brabec  <utx@penguin.cz>
+
+	* esd.m4: New check AM_ESD_SUPPORTS_MULTIPLE_RECORD.
+	* NEWS: Updated.
+
 2000-11-28  Stanislav Brabec  <utx@penguin.cz>
 
         * esd.c, configure.in: Security improvements: All unsafe
